[build-system]
requires = ["setuptools>=61.0",
             "wheel",
             "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "masa-ai"
version = '0.1.1'
authors = [
  { name = "Masa AI", email = "engineering@masa.ai" },
]
description = "MASA SDK - Masa's AI Software Architecture"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml>=5.4",
    "requests",
    "numpy",
    "pandas",
    "python-dotenv",
    "tqdm",
    "colorlog",
    "dynaconf",
    "jupyter",
    "notebook",
    "ipykernel",
    "sphinx",
    "sphinx_rtd_theme",
    "recommonmark",
    "myst-parser",
    "psycopg[binary]",
    "feedparser",
]

[project.urls]
"Homepage" = "https://github.com/masa-finance/masa"
"Bug Tracker" = "https://github.com/masa-finance/masa/issues"

[project.scripts]
masa-ai-cli = "masa_ai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["masa_ai*"]

[tool.setuptools.package-data]
"masa_ai" = [
    "*.json",
    "*.yaml",
    "*.txt",
    "configs/*.yaml",
    "request_list.json",
    "docs/source/**",
    "docs/index.rst",
    "docs/readme.rst",
    "docs/usage.rst",
    "docs/xtwitter_advanced.rst",
    "docs/conf.py",
    "docs/update_docs.py",
    "docs/view_docs.py",
    "docs/Makefile"
]